<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="Register for new account"
            android:textColor="#194B70"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"/>
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_intro"
            android:text="@string/inputUsername"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#194B70"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_username"
            android:layout_alignBaseline="@id/tv_username"
            android:textSize="20sp"
            android:textColor="#194B70"
            android:hint="@string/inputUsername"
            android:inputType="text"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_username" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/inputPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_username"
            android:textColor="#194B70"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_password"
            android:layout_alignBaseline="@id/tv_password"
            android:layout_below="@id/et_username"
            android:textSize="20sp"
            android:textColor="#194B70"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_password" />
        <TextView
            android:id="@+id/tv_RePassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/reInputPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_password"
            android:textColor="#194B70"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_reEnterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_RePassword"
            android:layout_alignBaseline="@id/tv_RePassword"
            android:layout_below="@id/et_password"
            android:textSize="20sp"
            android:textColor="#194B70"
            android:hint="@string/reInputPassword"
            android:inputType="textPassword"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_RePassword" />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/inputEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_RePassword"
            android:textColor="#194B70"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_email"
            android:layout_alignBaseline="@id/tv_email"
            android:layout_below="@id/et_reEnterPassword"
            android:textSize="20sp"
            android:textColor="#194B70"
            android:hint="@string/inputEmail"
            android:inputType="textEmailAddress"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_email" />
        <TextView
            android:id="@+id/tv_reEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/reInputEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@id/tv_email"
            android:textColor="#194B70"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_reEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_reEmail"
            android:layout_alignBaseline="@id/tv_reEmail"
            android:layout_below="@id/et_email"
            android:textSize="20sp"
            android:textColor="#194B70"
            android:hint="@string/reInputEmail"
            android:inputType="textEmailAddress"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_reEmail" />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_reEmail"
            android:layout_marginTop="50dp"
            android:background="#194B70"
            android:text="@string/newUser"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</ScrollView>